# cronos

./: .gitignore  README.md  cronos.py  khronos.py  proba.txt  setup.cfg
src/: khronos.py
src/khronos/: khronos_uteis.py
src/kronus/: __init__.py
src/kronus.egg-info/: PKG-INFO
tests/: kronus_test.py
