[metadata]
name = kronus
version = attr: kronus.__version__
author = attr: kronus.__autor__
author_email = attr: kronus.__correo__
root_dir = attr: kronus.__root_dir__
license = attr: kronus.__licenza__
description = attr: kronus.__descricion__
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: kronus.__ligazon__
project_urls =
    Bug Tracker = attr: kronus.__problemas__
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: General
    Natural Language :: Galician
    Natural Language :: Portuguese
    Natural Language :: English
    Natural Language :: Spanish

[options]
python_requires = >= 3.10.1
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
